# mlisp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  preprocess.py
include/: mlisp.h
lib/hash/: hash.c
lib/mpc/: Makefile  README.md  mpc.c  mpc.h
lib/mpc/tests/: core.c  grammar.c  regex.c  test.c
lib/ptest/: Makefile  README.md  example2.c
src/: CMakeLists.txt  builtin.c  builtin.h  config.h  eval.c  eval.h  grammar.c  grammar.ebnf  grammar.h  lenv.c  lenv.h  lval.c  lval.h  main.c  parser.c  parser.h  stdlib.sls  tests.c  utils.c  utils.h
src/builtins/: CMakeLists.txt  builtin.c  builtin.h  conditions.c  list.c  math.c  misc.c  variables.c
src/profiler/: CMakeLists.txt  main.c  timer.c  timer.h
stdlib/: basic.sls
stdlib/tests/: basic.sls  run_all.sls
tests/: monkey.py  monkey_intelligent.py  run_tests.bat  run_tests.sh  test_builtins.py  test_conds.py  test_math.py  test_string.py  test_variables.py  testhelpers.py
